--- a/pom.xml
+++ b/pom.xml
@@ -82,5 +82,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		<!-- cglib -->
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 	</dependencies>
 </project>
