--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,11 @@
 			<artifactId>cglib</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+		<!-- commons-fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
